spacing issue for iPads

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
+@media (min-width: 768px)
+.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
+  margin-left: 25px;
+}
 .well {
   min-height: 20px;
   padding: 5px;
